--- a/apps/reactgrad-csr/index.html
+++ b/apps/reactgrad-csr/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <title>%APP_TITLE%</title>
+    <meta name="description" content="%APP_DESCRIPTION%" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
   </head>
   <body>
     <div id="root"></div>
